--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                         <h2 class="text-2xl md:text-4xl font-bold luxury-text uppercase whitespace-nowrap">전문분야</h2>
                     </div>
                     <p class="mt-4 md:mt-0 text-gray-900 text-sm font-medium max-w-md leading-relaxed">
-                        황소 특허법률사무소는 각 분야별 고도의 전문성을 보유한 변리사들이 고객의 지식재산을 완벽하게 보호합니다.
+                        황소 특허법률사무소는 각 기술 분야별 최고 수준의 전문성을 갖춘 변리사들이 고객의 지식재산을 빈틈없이 보호하고, 독점적 가치를 극대화합니다.
                     </p>
                 </div>
                 
@@ -438,7 +438,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>특허 및 실용신안
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            기술의 본질을 꿰뚫어 독점적 권리 확보를 위한 전략적 법률 솔루션을 제공합니다.
+                            기술의 핵심을 관통하는 고도화된 분석을 통해, 시장 진입 장벽을 구축하고 경쟁 우위를 선점하는 강력한 특허 포트폴리오를 설계합니다.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -450,7 +450,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>상표, 디자인 및 브랜드
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            타인이 모방할 수 없는 아이덴티티를 법적으로 수호하는 브랜드 매니지먼트를 제공합니다.
+                            단순한 권리 등록을 넘어, 타인이 모방할 수 없는 브랜드의 아이덴티티를 법적으로 수호하는 통합적인 브랜드 매니지먼트를 제공합니다.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -462,7 +462,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>심판 및 소송 대응
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            국내 최대 규모의 로펌과 인하우스 경력에 기반하여 침해 분쟁에서의 승리를 위한 법률 솔루션을 제공합니다.
+                            국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 분쟁의 초기 단계부터 소송까지 고객의 실익을 최우선으로 하는 승소 전략을 제시합니다.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -474,7 +474,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>IP 자문
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            창의적 가치를 시장 경쟁력으로 전환하는 권리 분석, IP 가치평가까지 원스톱으로 지원합니다.
+                            IP 가치 평가부터 기술거래, 라이선싱 전략까지, 창의적 아이디어를 수익화하고 기업의 시장 경쟁력을 극대화하는 원스톱 IP 경영 솔루션을 제공합니다.
                         </p>
                     </div>
                 </div>
@@ -749,7 +749,7 @@
                         <h2 class="text-2xl md:text-4xl font-bold luxury-text uppercase whitespace-nowrap">Our Expertise</h2>
                     </div>
                     <p class="mt-4 md:mt-0 text-gray-900 text-sm font-medium max-w-md leading-relaxed">
-                        Taurus IP Law Firm provides perfect protection for your intellectual property through attorneys with high-level expertise in each field.
+                        Taurus IP Law Firm seamless protection for your intellectual property, maximizing its exclusive value and competitive edge, with top-tier expertise across diverse technical fields.
                     </p>
                 </div>
                 
@@ -763,7 +763,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>Patent & Utility Model
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            We provide strategic legal solutions to secure exclusive rights by penetrating the essence of technology.
+                            We analyze the core of your technology to build robust patent portfolios that establish market entry barriers and secure a dominant competitive advantage.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -775,7 +775,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>Trademark & Design
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            We provide brand management to legally defend an identity that others cannot imitate.
+                            Going beyond mere registration, we provide comprehensive brand management that legally protects your brand's identity and prevents others from imitating it.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -787,7 +787,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>Trials & Litigation
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            Based on experience in Korea's largest law firms and in-house teams, we provide legal solutions for victory in infringement disputes.
+                            Leveraging extensive experience from top-tier law firms and in-house roles, we provide winning legal strategies that prioritize your practical interests, from early dispute resolution to full-scale litigation.
                         </p>
                     </div>
                     <div class="group cursor-pointer">
@@ -799,7 +799,7 @@
                             <span class="w-6 h-[1px] bg-[#6B0D16] mr-3"></span>IP Consulting
                         </h4>
                         <p class="text-sm text-gray-900 leading-relaxed font-medium">
-                            We support everything from rights analysis to IP valuation, converting creative value into market competitiveness.
+                            From IP valuation to technology transfer and licensing, we offer one-stop IP management solutions that monetize creative ideas and maximize market competitiveness.
                         </p>
                     </div>
                 </div>
