--- a/index.html
+++ b/index.html
@@ -1527,10 +1527,10 @@
                      // [PC 화면 이름 두줄 현상 제거] whitespace-nowrap 추가
                      cardHTML = `
                         <div class="flex flex-col sm:flex-row gap-12 items-start">
-                            <div class="w-full sm:w-64 aspect-[4/5] overflow-hidden transition-all duration-1000 bg-gray-200">
-                                <img src="${person.imgCard}" alt="${person.name}" class="w-full h-full object-cover">
-                            </div>
-                            <div class="pt-4 flex-1">
+                               <div class="w-full sm:w-64 shrink-0 aspect-[4/5] overflow-hidden transition-all duration-1000 bg-gray-200">
+                                      <img src="${person.imgCard}" alt="${person.name}" class="w-full h-full object-cover object-top">
+                               </div>
+                        <div class="pt-4 flex-1">
                                 <div class="mb-4 flex items-baseline">
                                     <span class="text-sm font-bold text-black mr-2">${labelText}</span>
                                 </div>
