--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
                 engName: "Tae Sun, PARK", 
                 title: "Managing Partner", 
                 // KR Data
-                desc: ["서울대 전기.정보공학부 출신", "김.장 법률사무소 출신", "SW/ICT 기술 전문"], 
+                desc: ["서울대 전기.정보공학부 졸업", "김.장 법률사무소 출신", "SW/ICT 기술 전문가"], 
                 detailedExperience: [
                     {
                         title: "특허출원 업무 수행",
@@ -1294,7 +1294,7 @@
                 name: "이동근", 
                 engName: "Dong Keun, LEE", 
                 title: "Managing Partner", 
-                desc: ["서강대 기계공학과 출신", "기업 특허전략 전문가", "건설 기술 전문"], 
+                desc: ["서강대 기계공학과 졸업", "기업 특허전략 전문가", "가전 및 건축 기술 전문가"], 
                 detailedExperience: [
                    {
                         title: "기업 특허전략 업무 수행",
