--- a/index.html
+++ b/index.html
@@ -693,10 +693,10 @@
                                 </iframe>
                             </div>
                             <div class="w-full h-72 bg-gray-50 rounded-xl overflow-hidden shadow-lg border border-gray-100 relative group">
-                                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&q=80&w=800" 
+                                <img src="./professionals/team.webp" 
                                      alt="황소 특허법률사무소 단체사진" 
-                                     class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 transform group-hover:scale-105">
-                                 <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
+                                     class="w-full h-auto object-contain transition-all duration-500 transform group-hover:scale-105">
+                                  </div>
                             </div>
                         </div>
                     </div>
@@ -1394,11 +1394,11 @@
         const columnsData = [
             { 
                 id: 1, 
-                date: "Apr. 2026", 
+                date: "Apr. 1. 2026", 
                 title: "황소 특허법률사무소 개소", 
-                summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.", 
-                img: "https://images.unsplash.com/photo-1507146426996-ef05306b995a?auto=format&fit=crop&q=80&w=800", 
-                content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.</p>` 
+                summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.", 
+                img: "./professionals/team.webp", 
+                content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.<br>국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
             }
         ];
 
