--- a/index.html
+++ b/index.html
@@ -692,11 +692,11 @@
                                     allowfullscreen>
                                 </iframe>
                             </div>
-                            <div class="w-full h-72 bg-gray-50 rounded-xl overflow-hidden shadow-lg border border-gray-100 relative group">
-                                <img src="./professionals/team.webp" 
-                                     alt="황소 특허법률사무소 단체사진" 
-                                     class="w-full h-auto object-contain transition-all duration-500 transform group-hover:scale-105">
-                                  </div>
+                              <div class="w-full h-auto md:h-72 bg-gray-50 rounded-xl overflow-hidden shadow-lg border border-gray-100 relative group flex items-center justify-center">
+                                 <img src="./professionals/team.webp"
+                                      alt="황소 특허법률사무소 단체사진"
+                                      class="w-full h-auto md:h-full md:object-cover object-contain transition-all duration-500 transform group-hover:scale-105">
+                               </div>
                             </div>
                         </div>
                     </div>
@@ -1398,7 +1398,7 @@
                 title: "황소 특허법률사무소 개소", 
                 summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.", 
                 img: "./professionals/team.webp", 
-                content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.<br>국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
+                content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
             }
         ];
 
