--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
                 id: 1, 
                 date: "Apr. 1. 2026", 
                 title: "황소 특허법률사무소 개소", 
-                summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.", 
+                summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.", 
                 img: "./professionals/team.webp", 
                 content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
             }
@@ -1757,4 +1757,5 @@
         window.addEventListener('load', init);
     </script>
 </body>
+
 </html>
