--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
                 desc: ["서울대 전기.정보공학부 졸업", "김.장 법률사무소 출신", "SW/ICT 기술 전문가"], 
                 detailedExperience: [
                     {
-                        title: "특허출원 업무 수행",
+                        title: "출원 업무 수행",
                         items: [
                             "반도체 관련 글로벌 기업의 출원",                           
                             "SW/ICT 기반 스타트업의 출원",
@@ -1151,7 +1151,7 @@
                         ]
                     },
                     {
-                        title: "특허분쟁 업무 수행",
+                        title: "분쟁 업무 수행",
                         items: [
                             "반도체 증착 장비 관련 글로벌 분쟁사건 전담",
                             "국내 게임 기업의 상표권 분쟁사건 전담",
@@ -1159,7 +1159,7 @@
                         ]
                     },
                     {
-                        title: "특허자문 업무 수행",
+                        title: "자문 업무 수행",
                         items: [
                             "다국가의 현지대리인 선정 업무 지원",
                             "글로벌 화장품 기업의 전담 자문 경험 보유",
@@ -1180,7 +1180,7 @@
                 descEn: ["B.S., Seoul Nat'l Univ.", "Formerly at Kim & Chang", "SW/ICT Specialist"],
                 detailedExperienceEn: [
                     {
-                        title: "Patent Prosecution",
+                        title: "Prosecution",
                         items: [
                             "Patent filings for global semiconductor companies",
                             "Patent filings for SW/ICT-based startups",
@@ -1189,7 +1189,7 @@
                         ]
                     },
                     {
-                        title: "Patent Litigation",
+                        title: "Litigation",
                         items: [
                             "Represented global semiconductor companies in deposition equipment disputes",
                             "Successfully handled trademark disputes for domestic gaming companies",
@@ -1757,5 +1757,4 @@
         window.addEventListener('load', init);
     </script>
 </body>
-
 </html>
