--- a/index.html
+++ b/index.html
@@ -1170,6 +1170,7 @@
                 ],
                 education: [
                     "서울대 전기.정보공학부 졸업",
+                    "고려사이버대학교 법학과 졸업",
                     "(現) 황소 특허법률사무소 대표 변리사",
                     "(前) 김.장 법률사무소 국제부 변리사",
                     "(前) 가산 특허법인 SW/ICT팀 변리사",
@@ -1208,6 +1209,7 @@
                 ],
                 educationEn: [
                     "B.S., Electrical and Computer Engineering, Seoul National University",
+                    "B.S., Law, Korea Cyber University",
                     "Managing Partner, Patent Attorney at Taurus IP Law Firm",
                     "Former Patent Attorney at Kim & Chang (International IP Dept.)",
                     "Former Patent Attorney at Kasan IP Law Firm (SW/ICT Team)",
@@ -1224,30 +1226,96 @@
                 name: "이명우", 
                 engName: "Myung Woo, LEE", 
                 title: "Managing Partner", 
-                desc: ["기계공학 및 메카트로닉스 전문", "특허 심판 및 소송 승소율 90%", "기술가치평가사"], 
+                desc: ["서울대 기계항공공학부 졸업", "LG에너지솔루션, 삼성전자 특허팀 출신", "기계/장치/공정 기술 전문"], 
                 detailedExperience: [
-                    "기계/자동차 분야 특허출원 1,000건 이상 수행",
-                    "주요 분쟁 사건 승소 다수",
-                    "기술보증기금 외부 자문위원",
-                    "대한변리사회 이사"
+                    {
+                        title: "출원 업무 수행",
+                        items: [
+                            "가전제품 관련 국내 대기업의 출원업무",                           
+                            "2차전지 공정/설비/제품 관련 국내 대기업의 출원업무",
+                            "스타트업의 초기 특허 출원업무"
+                        ]
+                    },
+                    {
+                        title: "특허 포트폴리오 구축 업무 수행",
+                        items: [
+                            "LG에너지솔루션 공정/설비/제품 관련 특허 포트폴리오 구축",
+                            "삼성전자 공정/설비/제품 관련 특허 포트폴리오 구축"
+                        ]
+                    },
+                    {
+                        title: "특허분쟁 및 라이센싱 업무 수행",
+                        items: [
+                            "글로벌 경쟁사와의 분쟁사건 전담",
+                            "국내 협력사와의 특허 분쟁사건 전담",
+                            "글로벌 경쟁사와의 라이센싱(매입) 업무 전담"
+                        ]
+                    },
+                    {
+                        title: "기타 업무 수행",
+                        items: [
+                            "외식 프랜차이즈 기업의 상표 전담 자문 업무 수행",
+                            "삼성전자 IP센터 경영진단(감사) 업무 수행",
+                            "국민대학교 특허 특강 강연"                            
+                        ]
+                    },
                 ],
                 education: [
-                    "서울대학교 기계공학과 학사",
-                    "서울대학교 대학원 기계공학 석사",
-                    "제 46회 변리사 시험 합격"
+                    "서울대 기계항공공학부 졸업",
+                    "숭실사이버대 법학과 졸업",
+                    "(現) 황소특허법률사무소 대표변리사",
+                    "(前) 삼성전자 특허개발",
+                    "(前) LG에너지솔루션 특허팀",
+                    "(前) 특허법인 KBK 변리사",
+                    "(前) 한국수자원공사 엔지니어",
+                    "대한변리사회(KPAA) 정회원",
+                    "국민대학교 특허 멘토링 멘토"
                 ],
                 // US Data
-                descEn: ["Expert in Mechanical Eng. & Mechatronics", "90% Win Rate in Trials & Litigation", "Certified Technology Valuer"],
+                descEn: ["B.S., Seoul Nat'l Univ.", "Formerly at Samsung Electronics & LG Energy Solution", "Core Expertise: Mechanical, Equipment, and Process Technologies"],
                 detailedExperienceEn: [
-                    "Performed over 1,000 patent applications in mechanical/automotive fields",
-                    "Numerous victories in major dispute cases",
-                    "External Advisory Member, Korea Technology Finance Corporation",
-                    "Director, Korea Patent Attorneys Association"
+                    {
+                        title: "Patent Prosecution",
+                        items: [
+                            "Managed patent prosecution for major domestic conglomerates in the home appliance sector",
+                            "Managed patent prosecution for major domestic conglomerates regarding secondary battery processes, equipment, and products",
+                            "Conducted early-stage patent prosecution and IP strategy for startups"
+                        ]
+                    },
+                    {
+                        title: "Patent Portfolio Development",
+                        items: [
+                            "Built and managed strategic patent portfolios for processes, equipment, and products at LG Energy Solution",
+                            "Built and managed strategic patent portfolios for processes, equipment, and products at Samsung Electronics"
+                        ]
+                    },
+                    {
+                        title: "Patent Litigation & Licensing",
+                        items: [
+                            "Served as lead counsel in patent dispute cases involving global competitors",
+                            "Managed patent dispute cases involving domestic partner companies and suppliers",
+                            "Led licensing negotiations and patent acquisition initiatives with global competitors"
+                        ]
+                    },
+                    {
+                        title: "Other Professional Activities",
+                        items: [
+                            "Served as exclusive trademark counsel for F&B franchise corporations",
+                            "Conducted IP management audits and strategic assessments for the Samsung Electronics IP Center",
+                            "Special Guest Lecturer on Intellectual Property, Kookmin University"
+                        ]
+                    }
                 ],
                 educationEn: [
                     "B.S., Mechanical Engineering, Seoul National University",
-                    "M.S., Mechanical Engineering, Seoul National University",
-                    "Admitted to the Korean Patent Bar (46th)"
+                    "B.S., Law, Soongsil Cyber University",
+                    "Managing Partner, Patent Attorney at Taurus IP Law Firm",
+                    "Former Patent Attorney at Samsung Electronics (IP R&D Group)",
+                    "Former Patent Attorney at LG Energy Solution (IP Team)",
+                    "Former Patent Attorney at KBK IP Law Firm",
+                    "Former Engineer at K-water (Korea Water Resources Corporation)",
+                    "Regular member of the Korean Patent Attorneys Association (KPAA)",
+                    "Patent Mentor, Kookmin University"
                 ],
                 email: "mw.lee@taurusip.com", 
                 phone: "02-123-4568", 
