--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
                 ],
                 education: [
                     "서울대 전기.정보공학부 졸업",
-                    "고려사이버대학교 법학과 졸업",
+                    "고려사이버대 법학과 졸업",
                     "(現) 황소 특허법률사무소 대표 변리사",
                     "(前) 김.장 법률사무소 국제부 변리사",
                     "(前) 가산 특허법인 SW/ICT팀 변리사",
@@ -1825,4 +1825,5 @@
         window.addEventListener('load', init);
     </script>
 </body>
+
 </html>
