--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                 name: "이명우", 
                 engName: "Myung Woo, LEE", 
                 title: "Managing Partner", 
-                desc: ["서울대 기계항공공학부 졸업", "LG에너지솔루션, 삼성전자 특허팀 출신", "기계/장치/공정 기술 전문"], 
+                desc: ["서울대 기계항공공학부 졸업", "LG에너지솔루션, 삼성전자 특허팀 출신", "기계/장치/공정 기술 전문가"], 
                 detailedExperience: [
                     {
                         title: "출원 업무 수행",
@@ -1317,7 +1317,7 @@
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
                     "Patent Mentor, Kookmin University"
                 ],
-                email: "mw.lee@taurusip.com", 
+                email: "mwlee@taurusip.com", 
                 phone: "02-123-4568", 
                 imgCard: "./professionals/mwlee_L.webp", 
                 imgDetail: "./professionals/mwlee.webp" 
@@ -1352,7 +1352,7 @@
                     "LL.M., University of Washington School of Law",
                     "Admitted to the Korean Patent Bar (47th)"
                 ],
-                email: "dh.kim@taurusip.com", 
+                email: "dhkim@taurusip.com", 
                 phone: "02-123-4569", 
                 imgCard: "./professionals/dhkim_L.webp", 
                 imgDetail: "./professionals/dhkim.webp"
@@ -1362,7 +1362,7 @@
                 name: "이동근", 
                 engName: "Dong Keun, LEE", 
                 title: "Managing Partner", 
-                desc: ["서강대 기계공학과 졸업", "기업 특허전략 전문가", "가전 및 건축 기술 전문가"], 
+                desc: ["서강대 기계공학과 졸업", "기업 특허전략 전문가", "기계/가전/건축 기술 전문가"], 
                 detailedExperience: [
                    {
                         title: "기업 특허전략 업무 수행",
@@ -1825,5 +1825,4 @@
         window.addEventListener('load', init);
     </script>
 </body>
-
 </html>
