--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                         <div class="bg-[#f9f9f9] p-8 h-full">
                             <div class="mb-6 pb-2 border-b border-gray-200">
                                 <h4 id="detail-label-edu" class="text-lg font-bold text-black mb-1">학력 & 경력</h4>
-                                <span class="text-[10px] font-bold text-black uppercase tracking-widest">ACADEMIC & PROFESSIONAL BACKGROUND</span>
+                                <span class="text-[10px] font-bold text-black uppercase tracking-widest">PROFESSIONAL BACKGROUND</span>
                             </div>
                             <ul id="detail-education" class="space-y-3 text-sm text-gray-800 leading-relaxed">
                                 <!-- JS populated -->
@@ -1724,7 +1724,7 @@
             } else {
                 // English Data
                 document.getElementById('detail-label-pos').innerText = "Managing Partner";
-                document.getElementById('detail-label-edu').innerText = "ACADEMIC & PROFESSIONAL BACKGROUND";
+                document.getElementById('detail-label-edu').innerText = "Professional Background";
                 document.getElementById('detail-label-exp').innerText = "Professional Experiences";
 
                 document.getElementById('detail-name').innerText = person.engName; // Main name is Eng
@@ -1860,3 +1860,4 @@
 </body>
 
 </html>
+
