--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                         <div class="bg-[#f9f9f9] p-8 h-full">
                             <div class="mb-6 pb-2 border-b border-gray-200">
                                 <h4 id="detail-label-exp" class="text-lg font-bold text-black mb-1">주요 업무 이력</h4>
-                                <span class="text-[10px] font-bold text-black uppercase tracking-widest">Professional Experiences</span>
+                                <span class="text-[10px] font-bold text-black uppercase tracking-widest">REPRESENTATIVE MATTERS</span>
                             </div>
                             <ul id="detail-experience" class="space-y-3 text-sm text-gray-800 leading-relaxed">
                                 <!-- JS populated with detailed info -->
@@ -1725,7 +1725,7 @@
                 // English Data
                 document.getElementById('detail-label-pos').innerText = "Managing Partner";
                 document.getElementById('detail-label-edu').innerText = "Professional Background";
-                document.getElementById('detail-label-exp').innerText = "Professional Experiences";
+                document.getElementById('detail-label-exp').innerText = "Representative Matters";
 
                 document.getElementById('detail-name').innerText = person.engName; // Main name is Eng
                 document.getElementById('detail-eng-name').innerText = ""; // Hide sub name or put Korean? Let's hide
@@ -1860,4 +1860,5 @@
 </body>
 
 </html>
+
 
