--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
                         title: "출원 업무 수행",
                         items: [
                             "반도체 관련 글로벌 기업의 출원",                           
-                            "SW/ICT 기반 스타트업의 출원",
+                            "SW/ICT 기반 기업의 다국가 출원",
                             "스타트업의 초기 특허 포트폴리오 구축",
                             "AI, 가상자산 등 첨단기술 경험 다수 보유"
                         ]
@@ -1221,7 +1221,7 @@
                         title: "Prosecution",
                         items: [
                             "Patent filings for global semiconductor companies",
-                            "Patent filings for SW/ICT-based startups",
+                            "Multinational patent filings for SW/ICT-based companies",
                             "Building early-stage patent portfolios for startups",
                             "Extensive experience in advanced technologies such as AI and virtual assets"
                         ]
@@ -1860,6 +1860,3 @@
 </body>
 
 </html>
-
-
-
