--- a/index.html
+++ b/index.html
@@ -1269,19 +1269,19 @@
                         title: "출원 업무 수행",
                         items: [
                             "가전제품 관련 국내 대기업의 출원업무",                           
-                            "2차전지 공정/설비/제품 관련 국내 대기업의 출원업무",
+                            "2차전지 관련 국내 대기업의 출원업무",
                             "스타트업의 초기 특허 출원업무"
                         ]
                     },
                     {
-                        title: "특허 포트폴리오 구축 업무 수행",
+                        title: "IP 포트폴리오 구축 업무 수행",
                         items: [
-                            "LG에너지솔루션 공정/설비/제품 관련 특허 포트폴리오 구축",
-                            "삼성전자 공정/설비/제품 관련 특허 포트폴리오 구축"
+                            "LG에너지솔루션 특허 포트폴리오 구축",
+                            "삼성전자 특허 포트폴리오 구축"
                         ]
                     },
                     {
-                        title: "특허분쟁 및 라이센싱 업무 수행",
+                        title: "분쟁 및 라이센싱 업무 수행",
                         items: [
                             "글로벌 경쟁사와의 분쟁사건 전담",
                             "국내 협력사와의 특허 분쟁사건 전담",
@@ -1291,7 +1291,7 @@
                     {
                         title: "기타 업무 수행",
                         items: [
-                            "외식 프랜차이즈 기업의 상표 전담 자문 업무 수행",
+                            "외식 프랜차이즈 기업의 IP 전담 업무 수행",
                             "삼성전자 IP센터 경영진단(감사) 업무 수행",
                             "국민대학교 특허 특강 강연"                            
                         ]
@@ -1312,7 +1312,7 @@
                 descEn: ["B.S., Seoul Nat'l Univ.", "Formerly at Samsung Electronics & LG Energy Solution", "Core Expertise: Mechanical, Equipment, and Process Technologies"],
                 detailedExperienceEn: [
                     {
-                        title: "Patent Prosecution",
+                        title: "Prosecution",
                         items: [
                             "Managed patent prosecution for major domestic conglomerates in the home appliance sector",
                             "Managed patent prosecution for major domestic conglomerates regarding secondary battery processes, equipment, and products",
@@ -1320,14 +1320,14 @@
                         ]
                     },
                     {
-                        title: "Patent Portfolio Development",
+                        title: "IP Portfolio Development",
                         items: [
                             "Built and managed strategic patent portfolios for processes, equipment, and products at LG Energy Solution",
                             "Built and managed strategic patent portfolios for processes, equipment, and products at Samsung Electronics"
                         ]
                     },
                     {
-                        title: "Patent Litigation & Licensing",
+                        title: "Litigation & Licensing",
                         items: [
                             "Served as lead counsel in patent dispute cases involving global competitors",
                             "Managed patent dispute cases involving domestic partner companies and suppliers",
@@ -1402,14 +1402,14 @@
                 desc: ["서강대 기계공학과 졸업", "기업 특허전략 전문가", "기계/가전/건축 기술 전문가"], 
                 detailedExperience: [
                    {
-                        title: "기업 특허전략 업무 수행",
+                        title: "기업 IP전략 업무 수행",
                         items: [
                             "글로벌 철강기업의 특허망 구축, 특허보증, 소송전략 수립",
                             "글로벌 EPC 기업 기획, 계약, 분쟁 업무 수행"
                         ]
                     },
                    {
-                        title: "특허출원 업무 수행",
+                        title: "출원 업무 수행",
                         items: [
                             "가전제품 관련 글로벌 기업 출원업무",
                             "철강, 자동차부품 관련 글로벌 기업 출원업무",
@@ -1418,7 +1418,7 @@
                         ]
                     },
                     {
-                        title: "특허분쟁 업무 수행",
+                        title: "분쟁 업무 수행",
                         items: [
                             "유럽, 북미, 일본, 중국 경쟁사 간 침해, 무효 등 글로벌 분쟁 전담",
                             "스타트업 상표, 디자인 모조품 분쟁사건 전담",
@@ -1426,7 +1426,7 @@
                         ]
                     },
                     {
-                        title: "특허자문 업무 수행",
+                        title: "자문 업무 수행",
                         items: [
                             "화장품, 생활용품 관련 복수 스타트업 IP나래 업무 수행",
                             "자동차강판, 자동차부품, 성형 기술, 강건재 건설 관련 특허맵, 침해 분석 및 무효 조사 다수 수행"
@@ -1455,7 +1455,7 @@
                         ]
                     },
                    {
-                        title: "Patent Prosecution",
+                        title: "Prosecution",
                         items: [
                             "Patent filings for global companies related to home appliances",
                             "Patent filings for global companies related to steel and automotive components",
@@ -1464,7 +1464,7 @@
                         ]
                     },
                     {
-                        title: "Patent Litigation",
+                        title: "Litigation",
                         items: [
                             "Specialized in global disputes involving infringement and invalidity between competitors in Europe, North America, Japan, and China",
                             "Specialized in trademark and design counterfeit disputes for startups",
