--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="황소 특허법률사무소">
     <meta property="og:description" content="아이디어에 정의를, 혁신에 가치를 더하다">
     <meta property="og:image" content="./logo/share_v3.png"> 
-    <meta property="og:url" content="https://www.taurusip.com">
+    <meta property="og:url" content="https://www.taurus-ip.com">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -648,7 +648,7 @@
                                     본 사무소는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br>
                                     - 개인정보 보호책임자: 김동한, 박태선, 이동근, 이명우<br>
                                     - 직책: 대표 변리사<br>
-                                    - 연락처: contact@taurusip.com<br><br>
+                                    - 연락처: contact@taurus-ip.com<br><br>
                                     제10조(권익침해 구제 방법)<br>
                                     정보주체는 아래의 기관에 대해 개인정보 침해에 대한 피해구제, 상담 등을 문의하실 수 있습니다.<br>
                                     ▶ 개인정보 침해신고센터 (한국인터넷진흥원 운영)<br>
@@ -664,7 +664,7 @@
                                    ▶ 대검찰청 사이버범죄수사단 : 02-3480-3573 (www.spo.go.kr)<br>
                                    ▶ 경찰청 사이버안전국 : 182 (http://cyberbureau.police.go.kr)<br><br>
                                    제11조(개인정보 처리방침 시행 및 변경)<br>
-                                   이 개인정보 처리방침은 2026. 4. 1부터 적용됩니다.<br><br>
+                                   이 개인정보 처리방침은 2026. 3. 10.부터 적용됩니다.<br><br>
                                 </div>
                                 </div>
                                 <div class="flex items-center mt-4">
@@ -709,7 +709,7 @@
                                         </div>
                                         <div>
                                             <span class="block text-xs text-black uppercase tracking-widest mb-1 font-bold">E-MAIL</span>
-                                            <p class="text-gray-800 font-medium hover:text-[#6B0D16] cursor-pointer transition-colors">contact@taurusip.com</p>
+                                            <p class="text-gray-800 font-medium hover:text-[#6B0D16] cursor-pointer transition-colors">contact@taurus-ip.com</p>
                                         </div>
                                     </div>
                                     <div class="flex items-start group">
@@ -901,7 +901,7 @@
                                         </div>
                                         <div>
                                             <span class="block text-xs text-black uppercase tracking-widest mb-1 font-bold">E-MAIL</span>
-                                            <p class="text-gray-800 font-medium hover:text-[#6B0D16] cursor-pointer transition-colors">contact@taurusip.com</p>
+                                            <p class="text-gray-800 font-medium hover:text-[#6B0D16] cursor-pointer transition-colors">contact@taurus-ip.com</p>
                                         </div>
                                     </div>
                                     <div class="flex items-start group">
@@ -973,7 +973,7 @@
                         <div class="space-y-2 font-sans text-lg text-gray-800">
                             <p class="flex items-center gap-4">
                                 <span class="w-20 uppercase text-sm font-bold text-black flex-shrink-0 whitespace-nowrap">E-MAIL</span>
-                                <span id="detail-email" class="hover:text-[#6B0D16] cursor-pointer break-all sm:break-normal">email@taurusip.com</span>
+                                <span id="detail-email" class="hover:text-[#6B0D16] cursor-pointer break-all sm:break-normal">email@taurus-ip.com</span>
                             </p>
                             <p class="flex items-center gap-4">
                                 <span class="w-20 uppercase text-sm font-bold text-black flex-shrink-0 whitespace-nowrap">TEL</span>
@@ -1250,7 +1250,7 @@
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
                     "Examiner for New Product/Technology Certification, Public Procurement Service"
                 ],
-                email: "tspark@taurusip.com", 
+                email: "tspark@taurus-ip.com", 
                 phone: "0507-0178-5000", 
                 imgCard: "./professionals/tspark_L.webp", 
                 imgDetail: "./professionals/tspark.webp" 
@@ -1351,7 +1351,7 @@
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
                     "Patent Mentor, Kookmin University"
                 ],
-                email: "mwlee@taurusip.com", 
+                email: "mwlee@taurus-ip.com", 
                 phone: "02-123-4568", 
                 imgCard: "./professionals/mwlee_L.webp", 
                 imgDetail: "./professionals/mwlee.webp" 
@@ -1386,7 +1386,7 @@
                     "LL.M., University of Washington School of Law",
                     "Admitted to the Korean Patent Bar (47th)"
                 ],
-                email: "dhkim@taurusip.com", 
+                email: "dhkim@taurus-ip.com", 
                 phone: "02-123-4569", 
                 imgCard: "./professionals/dhkim_L.webp", 
                 imgDetail: "./professionals/dhkim.webp"
@@ -1486,7 +1486,7 @@
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
                     "Early Startup Package Committee Examiner"
                 ],
-                email: "dklee@taurusip.com", 
+                email: "dklee@taurus-ip.com", 
                 phone: "02-123-4570", 
                 imgCard: "./professionals/dklee_L.webp", 
                 imgDetail: "./professionals/dklee.webp" 
@@ -1496,11 +1496,11 @@
         const columnsData = [
             { 
                 id: 1, 
-                date: "Apr. 1. 2026", 
+                date: "Mar. 10. 2026", 
                 title: "황소 특허법률사무소 개소", 
-                summary: "황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다.", 
+                summary: "황소 특허법률사무소가 2026년 3월 10일부로 개소하였습니다.", 
                 img: "./professionals/team.webp", 
-                content: `<p>황소 특허법률사무소가 2026년 1월 4일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
+                content: `<p>황소 특허법률사무소가 2026년 3월 10일부로 개소하였습니다. 국내 최대 규모의 로펌 및 인하우스 출신의 풍부한 실무 경험을 바탕으로, 최고 수준의 서비스를 제공하겠습니다.</p><img src="./professionals/team2.webp" alt="단체 사진" class="w-full h-auto mt-10 mb-6 bg-gray-50">` 
             }
         ];
 
